--- a/style/messi.css
+++ b/style/messi.css
@@ -1,3 +1,10 @@
+@media only screen and (max-device-width: 500px) {
+  #mainPageDiv {
+    display: block;
+  } 
+}
+
+
 .messiName {
   margin-top: 1%;
   display: flex;
