--- a/style/mens.css
+++ b/style/mens.css
@@ -1,23 +1,81 @@
-@media only screen and (max-device-width: 1100px) {
-  #mensPlayersContainer {
-    display: block;
+@media (max-width: 768px) {
+  .navBar {
+    flex-direction: column;
+    text-align: center;
+  }
+
+
+  .navBar .mensText {
+    font-size: 1.2em;
+  }
+
+
+  .mensPlyersCard {
+    width: 100%;
+    margin: 10px 0;
+  }
+
+
+  .mensCardImg {
+    height: 200px;
+  }
+
+
+  .cardBody {
+    padding: 5px;
+  }
+
+
+  .cardTitle {
+    font-size: 20px;
+  }
+
+
+  .cardDescription {
+    font-size: 12px;
   }
 }
 
 
-.mensText {
-  display: flex;
-  justify-content: center;
-  color: #fff;
-  font-weight: bolder;
+@media (max-width: 480px) {
+  .navBar {
+    padding: 10px;
+  }
+
+
+  .navBar a i {
+    font-size: 1.2em;
+  }
+
+
+  .navBar .mensText {
+    font-size: 1em;
+  }
+
+
+  .mensPlyersCard {
+    margin: 5px 0;
+  }
+
+
+  .mensCardImg {
+    height: 150px;
+  }
+
+
+  .cardTitle {
+    font-size: 18px;
+  }
+
+
+  .cardDescription {
+    font-size: 10px;
+  }
 }
 
 
 .header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1px;
+  padding: 10px 0;
 }
 
 
@@ -25,145 +83,120 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  max-width: 1200px; /* Adjust the max-width as needed */
-  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 
-.navBar i, .navBar p {
-  display: inline-flex;
-  align-items: center;
-  cursor: pointer;
+.navBar a {
   color: #fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 
-.navBar i {
+.navBar a i {
   margin-right: 8px;
 }
 
 
-.navBar .back {
-  position: absolute;
-  left: 0;
-  display: flex;
-  align-items: center;
-}
-
-
-.navBar .mensText {
-  flex: 1;
+.mensText {
+  color: #fff;
+  font-weight: bolder;
   text-align: center;
-  font-size: 1.5em;
-}
-
-
-.mensCardImg {
-  opacity: 0.9;
-  transition:  .5s;
-  height: 350px;
-  width: 250px;
-}
-
-
-.mensPlyersCard {
-  height: 500px;
-  margin: 60px;
-  box-shadow:  5px 5px 20px black;
-  overflow: hidden;
-  border-radius: 5px;
+  flex: 1;
 }
 
 
 .mensPlayersContainer {
-  justify-content: center;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 8%;
+}
+
+
+.mensPlyersCard {
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 5px 5px 20px black;
+  margin: 20px;
+  overflow: hidden;
+  transition: transform 0.3s;
+  width: 300px;
+  position: relative;
+}
+
+
+.mensPlyersCard:hover {
+  transform: scale(1.05);
+}
+
+
+.mensCardImg {
+  height: 350px;
+  width: 100%;
+  object-fit: cover;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+
+.mensPlyersCard:hover .mensCardImg {
+  transform: scale(1.1);
+  opacity: 0.8;
 }
 
 
 .cardBody {
-  height: 70px;
-  width: 350px;
-  padding: 6px;
-  box-sizing: border-box;
-  position: absolute;
-  bottom:  150px;
+  background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
-  transition: 1s;
+  padding: 10px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  transition: height 0.5s, opacity 0.5s;
 }
 
 
 .cardTitle {
-  transition:.8s;
-  margin: 10px;
-  font-size: 40px;
+  margin: 0;
+  font-size: 24px;
 }
 
 
 .cardDesWithLink {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
 .cardDescription {
-  font-size: 15px;
-  margin: 20px;
-  visibility: hidden;
+  font-size: 14px;
+  margin: 10px 0;
   opacity: 0;
-  transition:1.2s;
-}
-
-
-.cardsLink{
-  visibility: hidden;
-  text-decoration: none;
-  color: blueviolet;
-}
-
-
-.mensPlyersCard:hover {
-  cursor: pointer;
-}
-
-
-.mensPlyersCard:hover .cardBody {
-  height: 150px;
-  bottom: 90px;
-  opacity: 0.5;
-  width: 200px;
+  transition: opacity 0.5s;
 }
 
 
 .mensPlyersCard:hover .cardDescription {
   opacity: 1;
-  visibility: visible;
-  font-size: 13px;
 }
 
 
-.mensPlyersCard:active .mensCardImg {
-  opacity: 1;
+.cardsLink {
+  color: #00f;
+  text-decoration: none;
 }
 
 
-.mensPlyersCard:hover .mensCardImg {
-  transform: scale(1.1) rotate(-0.5deg);
+.cardsLink:hover {
+  text-decoration: underline;
 }
 
 
-.mensPlyersCard:hover .cardTitle {
-  font-size: 15px;
-  transform: scale(1.1);
-}
-
-
-.mensPlyersCard:hover .cardsLink {
-  visibility: visible;
-  transform: scale(1.1);
-}
-
-
-.fa-arrow-left {
-  color: #fff;
+#messiCard {
+  height: fit-content;
 }
