--- a/style/messi.css
+++ b/style/messi.css
@@ -1,7 +1,11 @@
-@media only screen and (max-device-width: 500px) {
+@media only screen and (max-device-width: 750px) {
   #mainPageDiv {
-    display: block;
-  } 
+    flex-direction: column;
+    align-items: center;
+  }
+  #messiCard {
+    width: fit-content;
+  }
 }
 
 
